# build-guide

./: README.md  conf.py  index.rst  pyproject.toml
.github/workflows/: qcom-preflight-checks.yml
topic/k2c-qli-build-ga/: acronyms_and_terms.rst  addn_host_setup_build_firmware.rst  build_addn_info.rst  build_bsp_image_unreg.rst  build_default_config_cli.rst  build_default_config_launcher.rst  build_frm_source_qsc_cli.rst  build_from_source_QSC_CLI.rst  build_from_source_github.rst  build_from_source_github_intro.rst  build_from_source_qsc_gui_intro.rst  build_landing_page.rst  build_own_config_cli.rst  build_own_config_launcher.rst  build_qim_sdk_image_unreg.rst  build_qir_sdk_unreg.rst  build_qsc_cli.rst  build_realtime_image_unreg.rst  build_with_dockerfile.rst  build_with_firmware.rst  build_with_standalone_commands_unreg.rst  developer_workflow.rst  download_software_cli.rst  download_software_launcher.rst  flash_images.rst  flash_images_registered.rst  flash_images_unregistered.rst  github_workflow_options.rst  github_workflow_unregistered_users.rst  host_machine_requirements.rst  host_machine_requirements_reg_unreg.rst  how_to.rst  howto_build.rst  howto_flash.rst  howto_setup.rst  howto_sync.rst  install_pcat_qud.rst  install_qsc_cli.rst  introduction.rst  qsc_install.rst  (+6 more)
