[project]
name = "build-guide"
version = "2.0"
description = "Qualcomm Linux Build Guide"
requires-python = "==3.10.*"

dependencies = [
  "alabaster==1.0.0",
  "babel==2.18.0",
  "certifi==2026.1.4",
  "charset-normalizer==3.4.4",
  "docutils==0.21.2",
  "fspath==20230629",
  "idna==3.11",
  "imagesize==1.4.1",
  "jinja2==3.1.6",
  "linuxdoc==20240924",
  "markupsafe==3.0.3",
  "packaging==26.0",
  "pygments==2.19.2",
  "requests==2.32.5",
  "setuptools==80.10.2",
  "six==1.17.0",
  "snowballstemmer==3.0.1",
  "sphinx==8.1.3",
  "sphinx-design==0.6.1",
  "sphinx-new-tab-link==0.8.1",
  "sphinx-rtd-theme==3.1.0",
  "sphinx-tabs==3.4.7",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-extdevhelper-kasane==0.2.1",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jquery==4.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==2.0.0",
  "sphinxcontrib-video==0.4.2",
  "tomli==2.4.0",
  "urllib3==2.6.3",
]
